--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   .cal td.day--cutoff { background: #dcdcdc; color: #a0a0a0; }
 
   .num {   position:absolute;
-  top:6px; right:8px; font-size:13px; font-weight:700; color:var(--ink);
-  background:#fff; padding:1px 4px; border-radius:4px;box-shadow:0 0 2px rgba(0,0,0,0.15);
+  top:1px; right:8px; font-size:13px; font-weight:700; color:var(--ink);
+   padding:1px 1px; 
   z-index:2;}
 
   .badge { margin-top: 12px; display:block; font-size:12px; padding:4px 6px; line-height:1.2; border-radius:10px; color:#fff; }
